--- a/index.html
+++ b/index.html
@@ -1,54 +1,130 @@
 <!doctype html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
-        <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-        <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-        <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
-        <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
-    </head>
+<head>
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
-    <body style="margin: 0; overflow: hidden;">
-        <a-scene
-            vr-mode-ui="enabled: false;"
-            loading-screen="enabled: false;"
-            renderer="logarithmicDepthBuffer: true;"
-            arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
-            id="scene"
-            embedded
-            gesture-detector
-        >
-            <a-assets>
-                <a-asset-item
-                    id="animated-asset"
-                    src="assets/asset.glb"
-                ></a-asset-item>
-            </a-assets>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+    <script
+        src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
+    <script
+        src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
+    <script
+        src="https://rawgit.com/nicolocarpignoli/nicolocarpignoli.github.io/master/ar-click-events/events.js"></script>
 
-            <a-marker
-                id="animated-marker"
-                type="pattern"
-                preset="custom"
-                url="assets/marker.patt"
-                raycaster="objects: .clickable"
-                emitevents="true"
-                cursor="fuse: false; rayOrigin: mouse;"
-                id="markerA"
-            >
-                <a-entity
-                    id="bowser-model"
-                    scale="0.9971786269298606 0.9971786269298606 0.9971786269298606"
-                    rotation="-90 0 0"
-                    animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
-                    class="clickable"
-                    gesture-handler
-                ></a-entity>
-            </a-marker>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-            <a-entity camera></a-entity>
-        </a-scene>
-    </body>
+    <script>
+        window.onload = function () {
+          document
+            .querySelector("button")
+            .addEventListener("click", function () {
+                open('https://www.instagram.com/kingsname/');
+            });
+        };
+      </script>
+
+    <style>
+        .fa {
+            padding: 20px;
+            font-size: 60pt;
+            width: 50px;
+            text-align: center;
+            text-decoration: none;
+        }
+
+        .fa:hover {
+            opacity: 0.7;
+        }
+
+        .fa-instagram {
+            background: #125688;
+            color: white;
+            width: 300px;
+            height: 300px;
+            position: absolute;
+            left: 0;
+            bottom: 0;
+        }
+
+        @media (min-width: 360px) and (max-width: 720px) {
+            .fa {
+                padding: 20px;
+                font-size: 60pt;
+                width: 50px;
+                text-align: center;
+                text-decoration: none;
+            }
+
+            .fa:hover {
+                opacity: 0.7;
+            }
+
+            .fa-instagram {
+                background: #125688;
+                color: white;
+                width: 300px;
+                height: 300px;
+                position: absolute;
+                left: 0;
+                bottom: 0;
+            }
+
+        }
+
+        @media (min-width: 721px) {
+            .fa {
+                padding: 20px;
+                font-size: 90pt;
+                width: 70px;
+                text-align: center;
+                text-decoration: none;
+            }
+
+            .fa:hover {
+                opacity: 0.7;
+            }
+
+            .fa-instagram {
+                background: #125688;
+                color: white;
+                width: 350px;
+                height: 350px;
+                position: absolute;
+                left: 0;
+                bottom: 0;
+            }
+
+        }
+    </style>
+
+</head>
+
+<body style="margin: 0; overflow: hidden;">
+    <a-scene vr-mode-ui="enabled: false;" loading-screen="enabled: false;" renderer="logarithmicDepthBuffer: true;"
+        arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;" id="scene" embedded gesture-detector>
+        <a-assets>
+            <a-asset-item id="animated-asset" src="assets/asset.glb"></a-asset-item>
+
+            <a-asset-item id="animated-asset2" src="assets/button.fbx"></a-asset-item>
+        </a-assets>
+
+        <a-marker id="animated-marker" type="pattern" preset="custom" url="assets/marker.patt"
+            raycaster="objects: .clickable" emitevents="true" cursor="fuse: false; rayOrigin: mouse;" id="markerA">
+            <a-entity id="bowser-model" position="0 0 0" scale="0.3 0.3 0.3" rotation="-90 0 0"
+                animation-mixer="loop: repeat" gltf-model="#animated-asset" class="clickable" gesture-handler>
+            </a-entity>
+        </a-marker>
+
+        <a-entity camera></a-entity>
+    </a-scene>
+
+    <button class="fa fa-instagram"></button>
+
+
+</body>
+
+
 </html>
