--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <a-scene vr-mode-ui="enabled: false;" loading-screen="enabled: false;" renderer="logarithmicDepthBuffer: true;"
         arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;" id="scene" embedded gesture-detector>
         <a-assets>
-            <a-asset-item id="animated-asset" src="assets/asset.glb"></a-asset-item>
+            <a-asset-item id="animated-asset" src="assets/asset_origin.glb"></a-asset-item>
 
         </a-assets>
 
