--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         AFRAME.registerComponent('clinkhandler', {
             init: function () {
                 this.el.addEventListener('click', function (evt) {
-                    open('https://www.instagram.com/kingsname/');
+                    open('https://t.me/tkgro');
                 });
             }
         })
