--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </a-assets>
 
         <a-assets>
-            <img id="instagram" src="./assets/instagram.png">
+            <img id="instagram" src="./assets/telegram.png">
         </a-assets>
 
         <a-marker id="animated-marker" type="pattern" preset="custom" url="assets/marker.patt"
